2004-09-29  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/test-man-parser.c:
	* src/test-uri.c:
	* src/yelp-man-parser.c:
	* src/yelp-man-parser.h:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	- Added yelp_document_info_get_filename
	- Made yelp-man-parser use YelpDocument

2004-09-29  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-man-parser.c:
	- DIE STRCMP DIE

2004-09-29  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/test-uri.c:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	- Removed the yelp-uri dependancy from yelp-utils
	- Removed all the init and mutex stuff

Wed Sep 29 00:53:03 2004  Jonathan Blandford  <jrb@gnome.org>

	* src/Makefile.am: Make the Gecko stuff build.

2004-09-28  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-utils.c:
	- Support for info URIs, and some clean-up

2004-09-28  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/test-uri.c:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	- Added yelp-utils.[ch], which will simplify things eventually

2004-09-24  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* src/Makefile.am:
	* src/yelp-html-gecko.c:
	* src/yelp-gecko-utils.cpp:
	* src/yelp-gecko-utils.h:
	* src/yelp-html.h:
	* src/yelp-window.c:
	- GEKCO!  Big thanks to Marco for the patch.

	* src/yelp-base.c:
	* src/yelp-window.c:
	- Initial work on the Firefox-esque Find toolbar.

	* src/yelp-db-pager.c:
	* src/yelp-error.c:
	* src/yelp-error.h:
	- Fixed a crasher.

	* stylesheets/man2html.xsl:
	- Fixed a type in the templates.

2004-09-22  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html.xsl
	- Removed; it's generated from db2html.xsl.in

2004-09-03  Shaun McCance  <shaunm@gnome.org>

	* po/ga.po:
	- Changed &8221; to &#8221;

2004-08-21  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added «nb» to ALL_LINGUAS.

2004-08-16  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "bs" to ALL_LINGUAS.

2004-08-10  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-history.c: